--- a/scss/layout/responsive/_index.scss
+++ b/scss/layout/responsive/_index.scss
@@ -169,7 +169,7 @@
   @include filterMixin(sm\:blur-, 1, 100, 1, 1px, blur, px);
   @include filterMixin(sm\:grayscale-, 1, 100, 1, 1%, grayscale, per);
   @include filterMixin(sm\:brightness-, 1, 50, 1, 0.1, brightness, '');
-  @include filterMixin(sm\:contrast-, 1, 50, 1, 0.1, brightness, '');
+  @include filterMixin(sm\:contrast-, 1, 50, 1, 0.1, contrast, '');
   @include dropShadowMixin(sm\:drop-shadow-, 0, 0, $fullcolors, hover);
   @include dropShadowMixin(sm\:drop-shadow-, 0, 0, $lightdark, hover);
 }
@@ -327,7 +327,7 @@
   @include filterMixin(md\:blur-, 1, 100, 1, 1px, blur, px);
   @include filterMixin(md\:grayscale-, 1, 100, 1, 1%, grayscale, per);
   @include filterMixin(md\:brightness-, 1, 50, 1, 0.1, brightness, '');
-  @include filterMixin(md\:contrast-, 1, 50, 1, 0.1, brightness, '');
+  @include filterMixin(md\:contrast-, 1, 50, 1, 0.1, contrast, '');
   @include dropShadowMixin(md\:drop-shadow-, 0, 0, $fullcolors, hover);
   @include dropShadowMixin(md\:drop-shadow-, 0, 0, $lightdark, hover);
 }
@@ -485,7 +485,7 @@
   @include filterMixin(lg\:blur-, 1, 100, 1, 1px, blur, px);
   @include filterMixin(lg\:grayscale-, 1, 100, 1, 1%, grayscale, per);
   @include filterMixin(lg\:brightness-, 1, 50, 1, 0.1, brightness, '');
-  @include filterMixin(lg\:contrast-, 1, 50, 1, 0.1, brightness, '');
+  @include filterMixin(lg\:contrast-, 1, 50, 1, 0.1, contrast, '');
   @include dropShadowMixin(lg\:drop-shadow-, 0, 0, $fullcolors, hover);
   @include dropShadowMixin(lg\:drop-shadow-, 0, 0, $lightdark, hover);
 }
